# steer_bot

steer_bot_control/: CMakeLists.txt  package.xml
steer_bot_control/config/: ctrl_ackermann_steering_controller.yaml  ctrl_steer_bot_hardware_gazebo.yaml  twist_mux.yaml
steer_bot_control/launch/: control.launch
steer_bot_control/src/: tf_broadcaster.cpp
steer_bot_description/: package.xml
steer_bot_description/urdf/: steer_bot.urdf.xacro  wheel.xacro
steer_bot_sim/: CMakeLists.txt  package.xml
steer_bot_sim/launch/: steer_bot_sim.launch
steer_bot_sim/rviz/: model.rviz  steer_bot_robot.rviz
steer_bot_sim/worlds/: empty.world
